# allianceauth-workflows

./: .coveragerc  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: automated-checks.yml
onboarding/: admin.py  app_settings.py  apps.py  auth_hooks.py  models.py  signals.py  tasks.py  urls.py  views.py
onboarding/management/commands/: onboarding_sync_filters.py
onboarding/templates/onboarding/: base.html  final.html  index.html  step.html
onboarding/tests/: test_example.py
testauth/settings/: base.py  local.py
workflows/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  managers.py  models.py  signals.py  urls.py  views.py
workflows/management/commands/: onboarding_sync_assignments.py  onboarding_sync_filters.py
workflows/migrations/: 0001_initial.py  0002_add_visibility_checks.py
workflows/templates/workflows/: base.html  dashboard.html  index.html  step.html
